--- a/blog/templates/blog/eachBlog.html
+++ b/blog/templates/blog/eachBlog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>{{ blog.title }}</h1>
-<p>{{ blog.describtion|t }}</p>
+<p>{{ blog.describtion }}</p>
 <text>{{ blog.date }}</text>
 </body>
 </html>
