--- a/templates/djangoProject3/home.html
+++ b/templates/djangoProject3/home.html
@@ -9,7 +9,7 @@
 <body>
 {% extends 'djangoProject3/base.html' %}
 {% block center %}
-<a href="{% url 'blog:blog' %}">blog</a>
+<a href="{% url 'blog:blog' %}">blog💻</a>
 
 {% for project in projects %}
     <h1>{{ project.title }}</h1>
